# ungelify-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  lib.rs  main.rs  mpk.rs  vfs.rs
src/mpk/: archive.rs  bytes.rs  entry.rs  iter.rs
src/vfs/: error.rs  mpk.rs  mpk_old.rs
