[package]
name = "ungelify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
byteorder = "1.5.0"
bytesize = "1.3.0"
clap = { version = "4.5.20", features = ["derive"] }
flate2 = "1.0.35"
globset = "0.4.15"
indexmap = "2.6.0"
tempfile = "3.13.0"
thiserror = "2.0.12"
